--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
   <h2>📘 NPO Handbook Viewer</h2>
-  <label><input type="checkbox" class="filter" data-filter="rule_type" value="statutory" checked> Statutory</label>
-  <label><input type="checkbox" class="filter" data-filter="rule_type" value="code_of_practice" checked> Code of Practice</label>
-  <label><input type="checkbox" class="filter" data-filter="rule_type" value="guidance" checked> Guidance</label>
-  <label><input type="checkbox" class="filter" data-filter="applies_to" value="prescribed_npo" checked> Prescribed NPO</label>
-  <label><input type="checkbox" class="filter" data-filter="applies_to" value="all" checked> All NPOs</label>
-  <hr>
+<!-- FILTER BAR -->
+<label><input type="checkbox" class="filter" data-filter="rule_type" value="statutory" checked> Light&nbsp;Blue</label>
+<label><input type="checkbox" class="filter" data-filter="rule_type" value="code_of_practice" checked> Magenta</label>
+<label><input type="checkbox" class="filter" data-filter="rule_type" value="guidance" checked> Green</label>
+<label><input type="checkbox" class="filter" data-filter="rule_type" value="general_info" checked> Blue / Grey</label>
+<hr>
   <div id="content">Loading...</div>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js"></script>
