--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Policy Viewer</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NPO Handbook Viewer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h2>📘 NPO Handbook Viewer</h2>
-  <label><input type="checkbox" class="filter" data-filter="rule_type" value="statutory" checked> Light&nbsp;Blue</label>
-  <label><input type="checkbox" class="filter" data-filter="rule_type" value="code_of_practice" checked> Magenta</label>
-  <label><input type="checkbox" class="filter" data-filter="rule_type" value="guidance" checked> Green</label>
-  <label><input type="checkbox" class="filter" data-filter="rule_type" value="general_info" checked> Blue&nbsp;/&nbsp;Grey</label>
-  <hr>
-  <div id="content">Loading...</div>
+  <header>
+    <h2>📘 NPO Handbook Viewer</h2>
+  </header>
+
+  <section class="filters">
+    <label>
+      <input type="checkbox" class="filter" data-filter="rule_type" value="statutory" checked>
+      Light Blue
+    </label>
+    <label>
+      <input type="checkbox" class="filter" data-filter="rule_type" value="code_of_practice" checked>
+      Magenta
+    </label>
+    <label>
+      <input type="checkbox" class="filter" data-filter="rule_type" value="guidance" checked>
+      Green
+    </label>
+    <label>
+      <input type="checkbox" class="filter" data-filter="rule_type" value="general_info" checked>
+      Blue / Grey
+    </label>
+  </section>
+
+  <main id="content">
+    Loading...
+  </main>
+
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
-
