--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <input type="checkbox" class="filter" data-filter="rule_type" value="guidance" checked>
       Green
     </label>
+      <label><input type="checkbox" class="filter" data-filter="rule_type" value="general_info" checked> 
+       Blue / Grey
+    </label>
   </section>
 
   <main id="content">
