style: modernize header and filters

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h2>📘 NPO Handbook Viewer</h2>
+  <header class="main-header">
+    <h1><span class="logo" aria-hidden="true">📘</span> NPO Handbook Viewer</h1>
   </header>
 
   <section class="filters">
