--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
     <label class="toggle">
       <input type="checkbox" class="filter" data-filter="rule_type" value="statutory" checked>
       <span class="toggle-track"></span>
-      <span class="toggle-label">Light Blue</span>
+      <span class="toggle-label">Statutory Requirements (Light Blue)</span>
     </label>
     <label class="toggle">
       <input type="checkbox" class="filter" data-filter="rule_type" value="code_of_practice" checked>
       <span class="toggle-track"></span>
-      <span class="toggle-label">Magenta</span>
+      <span class="toggle-label">NPO Codes of Practice (Red)</span>
     </label>
     <label class="toggle">
       <input type="checkbox" class="filter" data-filter="rule_type" value="guidance" checked>
       <span class="toggle-track"></span>
-      <span class="toggle-label">Green</span>
+      <span class="toggle-label">Guidance Notes (Green)</span>
     </label>
   </section>
 
