Color filter toggles by rule type

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   </section>
 
   <section class="filters">
-    <label class="toggle">
+    <label class="toggle toggle-statutory">
       <input type="checkbox" class="filter" data-filter="rule_type" value="statutory" checked>
       <span class="toggle-track"></span>
       <span class="toggle-label">Statutory Requirements (Light Blue)</span>
     </label>
-    <label class="toggle">
+    <label class="toggle toggle-code">
       <input type="checkbox" class="filter" data-filter="rule_type" value="code_of_practice" checked>
       <span class="toggle-track"></span>
       <span class="toggle-label">NPO Codes of Practice (Red)</span>
     </label>
-    <label class="toggle">
+    <label class="toggle toggle-guidance">
       <input type="checkbox" class="filter" data-filter="rule_type" value="guidance" checked>
       <span class="toggle-track"></span>
       <span class="toggle-label">Guidance Notes (Green)</span>
