--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NPO Handbook Viewer</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
-<body data-theme="light">
+<body data-theme="light" class="template-sharepoint regulated">
   <header class="main-header">
     <h1><span class="logo" aria-hidden="true">📘</span> NPO Handbook Viewer</h1>
   </header>
